--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node app/server.js"
+		"start": "node app/init.js"
 	},
 	"repository": {
 		"type": "git",
