--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/express": "^4.17.13",
 		"@types/react": "^18.0.9",
 		"@types/react-dom": "^18.0.5",
+		"@types/webpack-node-externals": "^2.5.3",
 		"body-parser": "^1.20.0",
 		"cookie-parser": "^1.4.6",
 		"express": "^4.17.3",
@@ -31,6 +32,7 @@
 		"react-dom": "^18.1.0",
 		"ts-loader": "^9.3.0",
 		"ts-node": "^10.8.0",
-		"webpack": "^5.72.1"
+		"webpack": "^5.72.1",
+		"webpack-node-externals": "^3.0.0"
 	}
 }
