--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node app/init.js",
-		"build": "tsc && webpack"
+		"build": "webpack"
 	},
 	"repository": {
 		"type": "git",
@@ -24,6 +24,7 @@
 		"@types/react": "^18.0.9",
 		"@types/react-dom": "^18.0.5",
 		"@types/webpack-node-externals": "^2.5.3",
+		"axios": "^0.27.2",
 		"body-parser": "^1.20.0",
 		"cookie-parser": "^1.4.6",
 		"express": "^4.17.3",
