--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"@types/webpack-node-externals": "^2.5.3",
 		"body-parser": "^1.20.0",
 		"cookie-parser": "^1.4.6",
-		"express": "^4.17.3",
+		"express": "^5.0.0-beta.1",
 		"google-auth-library": "^8.0.2",
 		"googleapis": "^100.0.0",
 		"react": "^18.1.0",
