--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@google-cloud/datastore": "^6.6.2",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.13",
+		"@types/jsonwebtoken": "^8.5.8",
 		"@types/react": "^18.0.9",
 		"@types/react-dom": "^18.0.5",
 		"@types/webpack-node-externals": "^2.5.3",
@@ -28,8 +29,8 @@
 		"body-parser": "^1.20.0",
 		"cookie-parser": "^1.4.6",
 		"express": "^5.0.0-beta.1",
-		"google-auth-library": "^8.0.2",
 		"googleapis": "^100.0.0",
+		"jsonwebtoken": "^8.5.1",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
 		"ts-loader": "^9.3.0",
