--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"nodemon": "^2.0.16",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"sass": "^1.52.3",
 		"ts-loader": "^9.3.0",
 		"ts-node": "^10.8.0",
 		"webpack": "^5.72.1",
