Move Sass to build step

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node app/init.js",
-		"build": "webpack",
+		"build": "webpack && sass src/shared/style/global.scss:static/style.css",
 		"dev": "webpack && (webpack w & nodemon app/init.js)"
 	},
 	"repository": {
